# imu-labeler

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: create_demo_gif.py
examples/: generate_sample_data.py  sample_config.yaml
examples/sample_data/: sample_imu.csv
imu_labeler/: __init__.py  __main__.py  app.py  config.py  gui.py  preprocessing.py  utils.py
