[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "imu-labeler"
version = "1.0.0"
description = "Interactive GUI tool for labeling IMU and time-series sensor data, with optional video synchronization."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Amey Rane", email = "ameyrane98@gmail.com" },
]
keywords = ["imu", "annotation", "labeling", "sensor", "accelerometer", "gyroscope", "wearable", "time-series"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "matplotlib>=3.5",
    "numpy>=1.21",
    "pandas>=1.3",
    "scipy>=1.7",
    "opencv-python>=4.5",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
imu-labeler = "imu_labeler.__main__:main"

[project.urls]
Homepage = "https://github.com/ameyrane98/imu-labeler"
Issues = "https://github.com/ameyrane98/imu-labeler/issues"

[tool.setuptools.packages.find]
include = ["imu_labeler*"]
